Fixed overflow in popup for weekly calendar

--- a/web/views/assets/css/style.css
+++ b/web/views/assets/css/style.css
@@ -2624,3 +2624,11 @@ hr.bottom-table-border {
   width: 50px;
   border-right: 1px solid #ddd;
 }
+
+.wh-display-cell {
+  /* display: table-cell; */
+}
+
+.wh-display-none {
+  /* display: none; */
+}
